# stk-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  skills-lock.json
.agents/skills/code-docs-spec/: SKILL.md
.agents/skills/code-docs-spec/references/: architecture-spec.md  blueprint-spec.md  docs-review-spec.md  prd-spec.md  test-spec.md
.agents/skills/code-principles/: SKILL.md
.agents/skills/code-principles/references/: py-principles.md  rust-principles.md  ts-principles.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/skill-creator/eval-viewer/: generate_review.py
.agents/skills/skill-creator/scripts/: aggregate_benchmark.py  generate_report.py  improve_description.py  package_skill.py  quick_validate.py  run_eval.py  run_loop.py  utils.py
.claude/: CLAUDE.md  settings.json
.claude/rule/: core-principles.md
.claude/skills/: code-docs-spec  code-principles
.claude/skills/stock-analysis/: SKILL.md
.claude/skills/stock-analysis/references/: commands.md  report-templates.md  strategies.md  workflows.md
.codex/: hooks.json
app/: cli.py  config.py  deps.py  errors.py
app/commands/: chip.py  flow.py  fundamental.py  history.py  indicator.py  market.py  news.py  quote.py  watchlist.py
app/models/: chip.py  common.py  flow.py  fundamental.py  history.py  indicator.py  market.py  news.py  quote.py
app/services/: akshare_quote.py  chip.py  flow.py  fundamental.py  history.py  indicator.py  longport_quote.py  market.py  news.py  quote.py  watchlist.py
app/store/: file_store.py
data/: hotspot.json  scan_ETF.json  scan_guancha.json
docs/design/: architecture.md  scoring-strategies.md
docs/skills/stk-cli-reference/: SKILL.md
docs/skills/stk-cli-reference/references/: market.md  output-schema.md  signal-strategy.md  stock.md  sync.md  tools.md  watchlist.md
docs/skills/stk-stock-analysis/: SKILL.md
docs/skills/stk-stock-analysis/evals/: evals.json
docs/skills/stk-stock-analysis/references/: commands.md  indicator-guide.md
docs/skills/stk-stock-analysis/templates/: README.md  group-signal-tracking.md  market-hotspot-analysis.md  multi-stock-deep-comparison.md
docs/skills/stk-stock-analysis/workflow/: daily-report.md
docs/skills/stock-analysis/: SKILL.md
docs/skills/stock-analysis/references/: commands.md  indicator-guide.md  report-templates.md
docs/skills/stock-analysis/templates/: README.md  group-signal-tracking.md  market-hotspot-analysis.md  multi-stock-deep-comparison.md
docs/skills/stock-analysis/workflow/: daily-report.md
docs/superpowers/specs/: 2026-06-20-watchlist-workflows-design.md
dosc/: uses.md
dosc/design/: architecture.md
plans/: peppy-juggling-simon.md
scripts/: Makefile
source/mx-skills/: README.md  meta.json
source/mx-skills/comparable-company-analysis/: SKILL.md
source/mx-skills/comparable-company-analysis/scripts/: excel_theme.py  get_data.py
source/mx-skills/fund-diagnosis/: SKILL.md
source/mx-skills/fund-diagnosis/scripts/: get_data.py
source/mx-skills/industry-research-report/: SKILL.md
source/mx-skills/industry-research-report/scripts/: get_data.py
source/mx-skills/industry-stock-tracker/: SKILL.md
source/mx-skills/industry-stock-tracker/scripts/: generate_industry_stock_tracker_report.py
source/mx-skills/initiation-of-coverage-or-deep-dive/: SKILL.md
source/mx-skills/initiation-of-coverage-or-deep-dive/scripts/: generate_deep_research_report.py
source/mx-skills/mx-finance-data/: SKILL.md
source/mx-skills/mx-finance-data/scripts/: get_data.py
source/mx-skills/mx-finance-search/: SKILL.md
source/mx-skills/mx-finance-search/scripts/: get_data.py
source/mx-skills/mx-financial-assistant/: SKILL.md
source/mx-skills/mx-financial-assistant/scripts/: generate_answer.py
source/mx-skills/mx-macro-data/: SKILL.md
source/mx-skills/mx-macro-data/scripts/: get_data.py
source/mx-skills/mx-stocks-screener/: SKILL.md
source/mx-skills/mx-stocks-screener/scripts/: get_data.py
source/mx-skills/stock-diagnosis/: SKILL.md
source/mx-skills/stock-diagnosis/scripts/: get_data.py
source/mx-skills/stock-earnings-review/: BUSINESS_LOGIC.md  SKILL.md
source/mx-skills/stock-earnings-review/scripts/: call_review_api.py  common.py  normalize_report_period.py  validate_entity.py
source/mx-skills/stock-market-hotspot-discovery/: SKILL.md
source/mx-skills/stock-market-hotspot-discovery/scripts/: get_data.py
source/mx-skills/topic-research-report/: SKILL.md
source/mx-skills/topic-research-report/scripts/: get_data.py
src/stk/: __init__.py  cli.py  config.py  deps.py  errors.py  output.py
src/stk/commands/: __init__.py  board.py  cache.py  chip.py  doctor.py  flow.py  fundamental.py  history.py  indicator.py  market.py  news.py  quote.py  scripts.py  stock.py  sync.py  watchlist.py
src/stk/models/: __init__.py  chip.py  common.py  comparison.py  etf.py  flow.py  fundamental.py  history.py  indicator.py  live_scan.py  market.py  news.py  quote.py  scan.py  score.py  sync.py  watchlist.py
src/stk/services/: akshare_quote.py  board.py  chip.py  comparison.py  etf.py  flow.py  fundamental.py  health.py  history.py  indicator.py  live_scan.py  longport_quote.py  market.py  news.py  quote.py  rank.py  scan.py  score.py  symbol.py  sync.py  ths_wrapper.py  watchlist.py
src/stk/store/: __init__.py  cache.py  file_store.py
src/stk/utils/: df.py  price.py  symbol.py  trading_session.py
tests/: conftest.py
tests/integration/: test_akshare_sources.py
tests/unit/: test_board_service.py  test_cache.py  test_chip.py  test_comparison_akshare.py  test_flow.py  test_flow_sector.py  test_fundamental_akshare.py  test_indicator.py  test_live_scan.py  test_market_breadth.py  test_output.py  test_quote_sector.py  test_scan.py  test_score.py  test_symbol.py  test_sync.py
