[project]
name = "stk-cli"
version = "0.1.0"
description = "A Stock Query CLI built with Typer for Agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "longport>=3.0.22",
    "akshare>=1.18.30",
    "ta-lib>=0.6.8",
    "pandas>=3.0.1",
]

[project.scripts]
stk = "app.cli:app"

[dependency-groups]
dev = [
    "ty>=0.0.20",
    "ruff>=0.15.4",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

# Ruff
[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "I",   # isort
    "TID", # tidy imports
    "PTH", # pathlib
    "RUF", # Ruff-specific
    "NPY", # numpy-specific
    "PD",  # pandas-specific
]
ignore = [
    "E501",   # line too long
    "RUF029", # functions declared async that do not await 
    # "F401",   # imported but unused
    # "F841",   # local variable assigned but never used
]
allowed-confusables = ["，", "。", "：", "；", "！", "？", "（", "）", "“", "”"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# Pytest
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "-s"]
pythonpath = "."
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
