[project]
name = "stk-cli"
version = "0.1.0"
description = "A Stock Query CLI built with Typer for Agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "longport>=3.0.22",
    "akshare>=1.18.30",
    "ta-lib>=0.6.8",
    "pandas>=3.0.1",
    "crawl4ai>=0.8.0",
]

[project.scripts]
stk = "stk.cli:cli"

[dependency-groups]
dev = [
    "ty>=0.0.20",
    "ruff>=0.15.4",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.7",
]

[build-system]
requires = ["uv_build>=0.10.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stk"

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

# Ruff
[tool.ruff]
line-length = 100
fix = true
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "D",    # pydocstyle
    "I",    # isort
    "N",    # pep8-naming
    "TID",  # tidy imports
    "PTH",  # pathlib
    "FLY",  # flynt-specific
    "RUF",  # Ruff-specific
    "FURB", # refurb specific
    "NPY",  # numpy-specific
    "PD",   # pandas-specific
]
ignore = [
    "F401", # module imported but unused (handled by pyflakes)
    "B008", # Typer calls in defaults (standard practice for Typer)
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-second-line
]
allowed-confusables = ["，", "。", "：", "；", "！", "？", "（", "）", "“", "”"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# Pytest
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "-s"]
pythonpath = "src"
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
